# transcriber

./: .gitignore  CLAUDE.md  LICENSE  README.md  transcribe.py
.claude/agents/: consistency.md  grug.md  minimalist.md
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  Field.tsx  Report.tsx  Settings.tsx  Transcribe.tsx  defaultPrompt.ts  i18n.ts  index.css  main.tsx  prefs.ts  reportTypes.ts
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.cuda.conf.json
app/src-tauri/src/: lib.rs
docs/: ARCHITECTURE.md  PLAN.md  REVIEW.md  STYLE.md
