[package]
name = "app"
version = "0.1.1"
description = "Local meeting transcriber and reporter"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# GPU build: fetch the CUDA runtime libs on first use and put them on the
# whisper-cli sidecar's LD_LIBRARY_PATH. Off by default (CPU/Metal builds).
cuda = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
keyring = "4"
serde_json = "1.0.150"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

